--- a/css/projectPage.css
+++ b/css/projectPage.css
@@ -40,7 +40,7 @@
   width: 100%;
   height: 0;
   transform: scale(1.1);
-  transition: 0.5s ease-in;
+  transition: 0.5s ease-in 0s;
 }
 
 .project-table td .img-desc:hover .overlay {
